// -=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
//  Created by Sam Deane on 20/05/2020.
//  All code (c) 2020 - present day, Elegant Chaos Limited.
// -=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-

import Core

public class TestModel: Model {
  public let repos: [Repo]

  public init() {
    let datastoreRepo = Repo("Datastore", owner: "elegantchaos", workflow: "Swift", state: .passing)
    let collection = Repo("CollectionExtensions", owner: "elegantchaos", workflow: "Tests", state: .passing)

    repos = [
      Repo("Actions", owner: "elegantchaos", workflow: "Tests", state: .passing),
      Repo("ActionsKit", owner: "elegantchaos", workflow: "Tests", state: .passing),
      Repo("ApplicationExtensions", owner: "elegantchaos", workflow: "Tests", state: .failing),
      Repo("BindingsExtensions", owner: "elegantchaos", workflow: "Tests", state: .passing),
      Repo("Builder", owner: "elegantchaos", workflow: "Tests", state: .passing),
      collection,
      Repo("CommandShell", owner: "elegantchaos", workflow: "Tests", state: .passing),
      datastoreRepo,
      Repo("Hardware", owner: "elegantchaos", workflow: "Build", state: .failing),
      Repo("Logger", owner: "elegantchaos", workflow: "tests", state: .running),
      Repo("ViewExtensions", owner: "elegantchaos", workflow: "Tests", state: .queued),
    ]

    super.init(repos)
  }

  public override func load() {
  }

  public override func save() {
  }
}
